[gd_scene load_steps=3 format=2]

[ext_resource path="res://art/UI/heart pixel art 32x32.png" type="Texture" id=1]
[ext_resource path="res://src/ui/HealthUI.gd" type="Script" id=2]

[node name="Health" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="heart1" type="Sprite" parent="."]
position = Vector2( 27.2074, 26.2961 )
texture = ExtResource( 1 )

[node name="heart2" type="Sprite" parent="."]
position = Vector2( 67.2074, 26.2961 )
texture = ExtResource( 1 )

[node name="heart3" type="Sprite" parent="."]
position = Vector2( 107.207, 26.2961 )
texture = ExtResource( 1 )
